Added coloring to the 10 boxes
Thought this could be a potential use case for
!important. This way the background color
of black could be left on the original class
declaration for the boxes. That way if new
boxes are added they would have a default
color of black. And just wanted to try it out
since it’s never really used.

--- a/css/index.css
+++ b/css/index.css
@@ -165,3 +165,45 @@ header nav a {
     margin-bottom: 25px;
 }
 /* End of header-hero class */
+
+/* Start of box coloring */
+.box:nth-of-type(1) {
+    background: teal !important;
+}
+
+.box:nth-of-type(2) {
+    background: gold !important;
+}
+
+.box:nth-of-type(3) {
+    background: cadetblue !important;
+}
+
+.box:nth-of-type(4) {
+    background: coral !important;
+}
+
+.box:nth-of-type(5) {
+    background: crimson !important;
+}
+
+.box:nth-of-type(6) {
+    background: forestgreen !important;
+}
+
+.box:nth-of-type(7) {
+    background:darkorchid !important;
+}
+
+.box:nth-of-type(8) {
+    background: hotpink !important;
+}
+
+.box:nth-of-type(9) {
+    background: indigo !important;
+}
+
+.box:nth-of-type(10) {
+    background: dodgerblue !important;
+}
+/* End of box coloring */
