--- a/css/index.css
+++ b/css/index.css
@@ -151,7 +151,6 @@ header nav {
     justify-content: space-between;
     align-items: flex-end;
     margin: 20px 0px 40px;
-
 }
 
 header nav a {
@@ -207,3 +206,67 @@ header nav a {
     background: dodgerblue !important;
 }
 /* End of box coloring */
+
+
+.one-column-content__about {
+    margin: 20px;
+}
+
+
+section h2 {
+    font-weight: 800;
+}
+
+.about-middle-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+}
+
+.about__card {
+    display: flex;
+    flex-direction: column;
+    width: 47%;
+    margin: 10px;
+    border-bottom: 1px dashed black;
+}
+
+.about__card h2 {
+    margin: 15px 0px 25px;
+}
+
+.about__card a {
+    color: black;
+	text-decoration: none;
+	border: 2px solid black;
+	padding: 10px 20px;
+    border-radius: 12px;
+    text-align: center;
+    width: 140px;
+    font-weight: 600;
+    margin: 35px 0px;
+}
+
+.about__card a:hover {
+    animation: wiggle 1100ms;
+}
+
+@keyframes wiggle {
+    0% {
+        transform: none;
+    }
+    25% {
+      transform: rotate(-28deg);
+    }
+    50% {
+      transform: rotate(16deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+  }
+
+  .bottom-about {
+      margin: 30px 15px;
+  }
